2005-06-28  Petr Ovtchenkov  <Petr.Ovchenkov@Kaspersky.COM>

	* EvPack.h: add missed short and unsigned short to transport.

2005-06-14  Petr Ovtchenkov  <Petr.Ovchenkov@Kaspersky.COM>

	* EventHandler.h: modern compilers support member templates,
	so member template methods Send and Forward added for
	parametric Event.

2005-03-30  Petr Ovtchenkov  <ptr@island.plnet.ru>

	* libstem (Repository): fix problems with modern compiler
	[gcc 3.4.2, more strict and near Standard]; reincarnation
	in CVS repository under version 4.0.

2003-11-06  Petr Ovtchenkov  <ptr@Island.Br.UrbanNet.Ru>

	* libEDS: library renamed to 'stem' == lower of 'StEM'

	* libstem: compilation with present libxmt and libsockios

2001-07-27  Petr Ovtchenkov  <ptr@ParallelGraphics.COM>

	* libEDS: Version 3.5.2
	
	* Makefile.gcc (Repository): provide workaround for
	bug in GNU make 3.79*---it foget old value of variable when
	tag-dependent variable use += operator, if includes of makefiles
	is too deep---near deepth of 3. This influence to libraries building.
	Add explicit link with other C++ shared libraries---this significantly
	reduce library size.

2001-06-13  Petr Ovtchenkov  <ptr@ParallelGraphics.COM>

	* NetTransport.cc (Repository): The limit of EDS message is increased
	from 1M to 4M;
	* libEDS: new patch number, library version 3.5.1 now.

2001-06-05  Petr Ovtchenkov  <ptr@ParallelGraphics.COM>

	* Makefile.inc (Message): library version 3.5.0
	This reflect real major libEDS release.

2001-06-04  Petr Ovtchenkov  <ptr@ParallelGraphics.COM>

	* libEDS: Work with STLport 4.5 beta 8 (from stlport cvs);
	remove obsolete in any case dependence from non-STLport iostreams
	realization (it should not work).

2001-06-01  Petr Ovtchenkov  <ptr@ParallelGraphics.COM>

	* The fork and become_daemon now in xmt library.

	* New exception class fork_in_parent added in xmt.

	* libEDS: version 0.5.0
	
2001-03-20  Petr Ovtchenkov  <ptr@ParallelGraphics.COM>
