@@ -1,10 +1,9 @@
 # -*- Makefile -*- Time-stamp: <01/07/27 14:54:18 ptr>
-# $Id$
 
 LIBNAME = stem
 MAJOR = 4
 MINOR = 0
-PATCH = 0
+PATCH = 1
 SRC_CC = _EventHandler.cc NetTransport.cc EvManager.cc EvPack.cc crc.cc \
          _SessionMgr.cc Names.cc Cron.cc _EvSession.cc
 
